<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Main2Activity">

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_centerHorizontal="true"
        android:paddingTop="70dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_add"
            android:layout_width="match_parent"
            android:layout_height="401dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="#f7f6f7"
            app:cardCornerRadius="6dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="274dp"
                android:layout_height="302dp"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/register"
                    android:textColor="#2b2727"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#2b2727"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit_2"
                            android:hint="@string/Username"
                            android:inputType="textPersonName"
                            android:paddingBottom="2dp"
                            android:textColor="#2b2727"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:textSize="13sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#2b2727"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit_2"
                            android:hint="@string/Password"
                            android:inputType="textPassword"
                            android:paddingBottom="2dp"
                            android:textColor="#2b2727"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:textSize="13sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#2b2727"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/et_repeatpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit_2"
                            android:hint="@string/repeat_password"
                            android:inputType="textPassword"
                            android:paddingBottom="2dp"
                            android:textColor="#2b2727"
                            android:textCursorDrawable="@drawable/bg_input_cursor_2"
                            android:textSize="13sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/bt_go"
                    android:layout_width="345dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/bt_shape_2"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/next"
                    android:textColor="#2b2727"></Button>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="50dp"
            android:layout_height="389dp"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/plus_x"
            android:transitionName="loginFab"
            app:fabSize="normal" />
    </FrameLayout>


</RelativeLayout>
