<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f7f5f5">
    <!--#e6e1e1-->

    <com.github.florent37.diagonallayout.DiagonalLayout
        android:id="@+id/diagonalLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_266dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:elevation="0dp"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        diagonal:diagonal_angle="10"
        diagonal:diagonal_direction="left"
        diagonal:diagonal_position="bottom">

        <com.flaviofaria.kenburnsview.KenBurnsView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/diagonallayout_background" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_105dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/stringValue2"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:layout_marginLeft="@dimen/dimen_30dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/stringValue3"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </com.github.florent37.diagonallayout.DiagonalLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_marginLeft="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_190dp"
        android:elevation="25dp"
        android:src="@drawable/diagonallayout_hughjackman" />

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_230dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <View
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <View
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/diagonalLayout"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/username"
                android:text="@string/stringValue4"
                android:textStyle="bold"
                android:textColor="@color/blue_grey_900"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/stringValue5"
                android:textColor="#3E3E3E"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_add"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="450dp"
        app:cardBackgroundColor="#f7f6f7"
        app:cardCornerRadius="6dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="生活挺难的，还好我可爱"
            android:textColor="#3E3E3E"
            android:textSize="16sp" />
    </android.support.v7.widget.CardView>
</RelativeLayout>
